// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pokecard component  snapshot for mock row 1`] = `
<div
  className="card"
>
  <img
    alt="Bulbasaur"
    src="http://www.serebii.net/pokemongo/pokemon/001.png"
  />
  <div
    className="container"
  >
    <h4>
      <b>
        #
        001
      </b>
    </h4>
    <p
      className="pokeName"
    >
      <b>
        Bulbasaur
      </b>
    </p>
    <p
      className="pokeType"
    >
      Grass 
      Poison 
    </p>
    <button
      onClick={[Function]}
      variant="outlined"
    >
      <Link
        style={
          Object {
            "textDecoration": "none",
          }
        }
        to="/showdetails"
      >
        Show Details
      </Link>
    </button>
  </div>
</div>
`;

exports[`Pokecard component snapshot for button click 1`] = `
<button
  onClick={[Function]}
  variant="outlined"
>
  <Link
    style={
      Object {
        "textDecoration": "none",
      }
    }
    to="/showdetails"
  >
    Show Details
  </Link>
</button>
`;
